force-app/main/default/objects/User_Feedback__c/User_Feedback__c.object-meta.xml
<CustomObject>
    <label>User Feedback</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Feedbacks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>