force-app/main/default/objects/User_Feedback__c/fields/Additional_User_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_User_Comments__c</fullName>
    <label>Additional User Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>