force-app/main/default/objects/User_Feedback__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Smiles Community Comments</label>
    <type>TextArea</type>
</CustomField>