force-app/main/default/objects/User_Feedback__c/fields/Expected_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Release_Date__c</fullName>
    <label>Expected Release Date</label>
    <type>Date</type>
</CustomField>