force-app/main/default/objects/User_Feedback__c/fields/O2T_User_Story_Reference__c.field-meta.xml
<CustomField>
    <fullName>O2T_User_Story_Reference__c</fullName>
    <label>O2T User Story Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>