force-app/main/default/objects/User_Feedback__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>IF(ISBLANK(Owner:Queue.QueueName) , Hyperlink(&quot;/&quot; &amp; Owner:User.Id, Owner:User.FirstName&amp;&apos; &apos;&amp;Owner:User.LastName, &quot;_self&quot;),  Owner:Queue.QueueName )</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>