force-app/main/default/objects/User_Feedback__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Record</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>User Feedbacks</relationshipLabel>
    <relationshipName>User_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>