force-app/main/default/objects/User_Feedback__c/fields/Priority_from_SSM__c.field-meta.xml
<CustomField>
    <fullName>Priority_from_SSM__c</fullName>
    <label>Priority from SSM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>