force-app/main/default/objects/User_Feedback__c/fields/Product_Feature1__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature1__c</fullName>
    <label>Product/Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account &amp; Contact</fullName>
            </value>
            <value>
                <fullName>Account Plan</fullName>
            </value>
            <value>
                <fullName>Boxes</fullName>
            </value>
            <value>
                <fullName>Opportunity &amp; Master Project</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Technical Assistance Request</fullName>
            </value>
            <value>
                <fullName>Visit Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>