force-app/main/default/objects/User_Feedback__c/fields/Product_Feature__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature__c</fullName>
    <label>Product/Feature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>