force-app/main/default/objects/User_Feedback__c/fields/User_BA__c.field-meta.xml
<CustomField>
    <fullName>User_BA__c</fullName>
    <label>User BA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>