force-app/main/default/objects/User_Feedback__c/fields/User_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>User_Market_Segment__c</fullName>
    <label>User Market Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>