force-app/main/default/objects/User_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Feature__c</columns>
    <columns>Feedback__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Rating__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Owner__c</columns>
    <columns>User_BA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>