force-app/main/default/objects/User_Feedback__c/listViews/Smiles_Community_User_Feedback.listView-meta.xml
<ListView>
    <fullName>Smiles_Community_User_Feedback</fullName>
    <filterScope>Queue</filterScope>
    <label>Smiles_Community</label>
    <queue>Smiles_Community</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>